--- a/Trees.ipynb
+++ b/Trees.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Trees.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOvkXEXi6L2BVt5bfN+UXn2",
+      "authorship_tag": "ABX9TyMmFdJ5ReDAn51hhH7H7cUb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +39,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install rich"
+        "pip install rich"
       ],
       "metadata": {
         "id": "20YQzpZu8Sae"
@@ -95,20 +94,17 @@
       "cell_type": "code",
       "source": [
         "python_tree = tree.add(\"📦 Learning by doing \", guide_style=\"bright_black\")\n",
-        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1P6tbmUbgPaMb7pTlFiAJxi2mevW7zXZx]Bad labels[/]                 - [bright_black]Identify bad labels.\")\n",
-        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1_73P2HIUujZdSmAuTfOtpIamURsGfeZh]Labeling data[/]              - [bright_black]A nice way to label your data.\")\n",
-        "python_tree.add(\"[bold link=https://github.com/RaminParker/Custom_Image_Classifier]Custom Image Classifier[/]    - [bright_black]Not yet finished image classifier.\")\n",
-        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1Pb34YE2nswlHoRdQ9KwB2SfchiLBhIQA]Stock Validation[/]           - [bright_black]Get the realy important stock infos from Yahoo finance.\")\n",
-        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1KbmCzuvamWShio24V3SIuOiejK3K0cXo]Train a Digit Classifier[/]   - [bright_black]Based on book Deep Learning with Fastai and Pytorch.\")\n",
-        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1qo03bkpLhaLebURAXJys3oCiOK9j1oLE]Mushroom detector[/]          - [bright_black]Use Kaggle dataset and build a lightweight mushroom detector.\")\n",
-        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/108yqk7lhifxEeAO76p3uEjhbrVzOSKZy]Sentiment Classification[/]   - [bright_black]Test how well we can use Naive Bayes to for sentiment analysis.\")\n",
-        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1xPIsj6o9Z8yBQWpM8pheGS27-nl9LQOe#scrollTo=6Oc6Dxi7drwj]Naive Bayes Classifier[/]     - [bright_black]Learning by doing. How does Naive Bayes work?\")\n",
-        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1zwM_2bK5E6-oRurxX-vYip3fr5UXGrDV#scrollTo=yPHS2GBGdDxd]Fast-Food classifier[/]       - [bright_black]Classify food which was cooked by our Spinfood customers.\")\n",
-        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1CXnAHBhzh50YPsy7wqJcoMZ59BhWNMjf]Read pdf-files[/]             - [bright_black]Import and merge pdf-files and extract text out of it.\")\n",
-        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1xFLqf5iBcXOdBQibBpu5ebOaHo6LKhdR#scrollTo=QdUaq6kCJckn]PCA[/]                        - [bright_black]Understand the math behind PCA.\")\n",
-        "python_tree.add(\"[bold link=https://github.com/RaminParker/Gradio-Templates]My Gradio templates[/]        - [bright_black]Share your Data Science Models with Gradio\")\n",
-        "python_tree.add(\"[bold link=https://github.com/RaminParker/Huggingface_Text]HugginFace Collection[/]      - [bright_black]NLU with HuggingFace library\")\n",
-        "python_tree.add(\"[bold link=https://github.com/RaminParker/bundesamt_fuer_statistik]Bundesamt für Statistik[/]    - [bright_black]Simple POC to request data from API\")\n",
+        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1P6tbmUbgPaMb7pTlFiAJxi2mevW7zXZx]Bad labels[/]           - [bright_black]Identify bad labels.\")\n",
+        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1_73P2HIUujZdSmAuTfOtpIamURsGfeZh]Labeling data[/]        - [bright_black]A nice way to label your data.\")\n",
+        "python_tree.add(\"[bold link=https://github.com/RaminParker/Custom_Image_Classifier]Custom Image Classifier[/] - [bright_black]Not yet finished image classifier.\")\n",
+        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1Pb34YE2nswlHoRdQ9KwB2SfchiLBhIQA]Stock Validation[/] - [bright_black]Get the realy important stock infos from Yahoo finance.\")\n",
+        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1KbmCzuvamWShio24V3SIuOiejK3K0cXo]Train a Digit Classifier[/] - [bright_black]Based on book Deep Learning with Fastai and Pytorch.\")\n",
+        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1qo03bkpLhaLebURAXJys3oCiOK9j1oLE]Mushroom detector[/] - [bright_black]Use Kaggle dataset and build a lightweight mushroom detector.\")\n",
+        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/108yqk7lhifxEeAO76p3uEjhbrVzOSKZy]Sentiment Classification[/] - [bright_black]Test how well we can use Naive Bayes to for sentiment analysis.\")\n",
+        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1xPIsj6o9Z8yBQWpM8pheGS27-nl9LQOe#scrollTo=6Oc6Dxi7drwj]Naive Bayes Classifier[/] - [bright_black]Learning by doing. How does Naive Bayes work?\")\n",
+        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1zwM_2bK5E6-oRurxX-vYip3fr5UXGrDV#scrollTo=yPHS2GBGdDxd]Fast-Food classifier[/] - [bright_black]Classify food which was cooked by our Spinfood customers.\")\n",
+        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1CXnAHBhzh50YPsy7wqJcoMZ59BhWNMjf]Read pdf-files[/] - [bright_black]Import and merge pdf-files and extract text out of it.\")\n",
+        "python_tree.add(\"[bold link=https://colab.research.google.com/drive/1xFLqf5iBcXOdBQibBpu5ebOaHo6LKhdR#scrollTo=QdUaq6kCJckn]Principal Component Analysis[/] - [bright_black]Understand the math behind PCA.\")\n",
         "\n",
         "\n",
         "talk_tree = tree.add(\"🎙️ Popular Talks\", guide_style=\"bright_black\")\n",
@@ -116,14 +112,14 @@
         "\n",
         "\n",
         "online_tree = tree.add(\"⭐ Online Projects\", guide_style=\"bright_black\")\n",
-        "online_tree.add(\"[bold link=https://www.spinfood.de/]spinfood.de[/]                - [bright_black]Code of this project is in a private repository!\")\n",
-        "online_tree.add(\"[bold link=https://www.passives-einkommen-aufbauen.com/mieten-und-bei-airbnb-vermieten/]Quadratwelt[/]                - [bright_black]We removed the website. Only left is the linked article.\")\n",
-        "online_tree.add(\"[bold link=https://raminparker.github.io/blocktime/]Bitcoin Blog[/]               - [bright_black]My blog about Bitcoin.\")\n",
+        "online_tree.add(\"[bold link=https://www.spinfood.de/]spinfood.de[/]   - [bright_black]Our startup! My love, my life, my biggest project. Private repository!\")\n",
+        "online_tree.add(\"[bold link=https://www.passives-einkommen-aufbauen.com/mieten-und-bei-airbnb-vermieten/]Quadratwelt[/]  - [bright_black]We removed the website. Only left is the linked article.\")\n",
+        "online_tree.add(\"[bold link=https://raminparker.github.io/blocktime/]Bitcoin Blog[/]   - [bright_black]My blog about Bitcoin.\")\n",
         "\n",
         "\n",
         "employer_tree = tree.add(\"👨‍💻 Employer\", guide_style=\"bright_black\")\n",
-        "employer_tree.add(\"[bold link=https://www.teambank.de/]TeamBank[/]                   - [bright_black]Working on ML-projects (NLU, web scraping & classifications)\")\n",
-        "employer_tree.add(\"[bold link=https://mpl.mpg.de/de/]Max Planck Institut[/]        - [bright_black]Ph.D student on the topic of twisted Photonic Crystal Fibres.\")"
+        "employer_tree.add(\"[bold link=https://www.teambank.de/]TeamBank[/] - [bright_black]Working on Data Science projects like chatbot, web scraping and classifications.\")\n",
+        "employer_tree.add(\"[bold link=https://mpl.mpg.de/de/]Max Planck Institut[/] - [bright_black]Ph.D student on the topic of twisted Photonic Crystal Fibres.\")"
       ],
       "metadata": {
         "id": "h7Qzge2x8d48"
@@ -136,7 +132,7 @@
       "source": [
         "console.print(tree)\n",
         "console.print(\"\")\n",
-        "console.print(\"[green]Checkout my blog about [bold link=https://raminparker.github.io/blocktime/]Bitcoin[/]\")"
+        "console.print(\"[green]Follow me on twitter [bold link=https://twitter.com/MyRetroFuture]@MyRetroFuture[/]\")"
       ],
       "metadata": {
         "id": "6znh3bmu95SM"
